--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js-smart-shuffle-words",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "author": "W3LabKr",
     "description": "",
     "main": "src/index.js",
@@ -29,7 +29,9 @@
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-ga": "^3.3.1",
         "react-i18next": "^11.18.3",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "recoil": "^0.7.4",
         "recoil-persist": "^4.2.0",
