--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "js-smart-shuffle-words",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "author": "W3LabKr",
     "description": "",
     "main": "src/index.js",
@@ -11,7 +11,15 @@
         "build": "craco build",
         "test": "craco test",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build",
+        "clean:dir": "rm -rf node_modules",
+        "clean:cache": "yarn cache clean",
+        "clean": "yarn clean:dir && yarn clean:cache",
+        "reinstall": "yarn clean && yarn install",
+        "lint": "eslint ./src",
+        "lint:fix": "eslint --fix ./src",
+        "format": "prettier --check ./src",
+        "format:fix": "prettier --write ./src"
     },
     "dependencies": {
         "@craco/craco": "^6.4.5",
@@ -39,8 +47,20 @@
         "webfontloader": "^1.6.28"
     },
     "devDependencies": {
+        "@babel/core": "^7.18.13",
+        "@babel/eslint-parser": "^7.18.9",
+        "@babel/preset-react": "^7.18.6",
+        "eslint": "^8.23.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-import-resolver-node": "^0.3.6",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "global": "^4.4.0",
         "npm-check-updates": "^16.0.5",
+        "prettier": "^2.7.1",
         "yarn-upgrade-all": "^0.7.1"
     }
 }
