--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "lint": "eslint ./src",
         "lint:fix": "eslint --fix ./src",
         "format": "prettier --check ./src",
-        "format:fix": "prettier --write ./src"
+        "format:fix": "prettier --write ./src",
+        "version": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
     },
     "dependencies": {
         "@craco/craco": "^6.4.5",
@@ -31,6 +32,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.4.2",
+        "conventional-changelog-cli": "^2.2.2",
         "copy-to-clipboard": "^3.3.2",
         "gh-pages": "^4.0.0",
         "i18next": "^21.9.0",
