--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "lint:fix": "eslint --fix ./src",
         "format": "prettier --check ./src",
         "format:fix": "prettier --write ./src",
-        "version": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
+        "version": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s && git add CHANGELOG.md",
+        "version:init": "conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
     },
     "dependencies": {
         "@craco/craco": "^6.4.5",
