--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "js-smart-shuffle-words",
     "version": "1.2.1",
     "author": "W3LabKr",
-    "description": "",
+    "description": "Shuffle the words on each line",
     "main": "src/index.js",
     "homepage": "./",
     "private": true,
@@ -41,6 +41,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga": "^3.3.1",
+        "react-helmet-async": "^1.3.0",
         "react-i18next": "^11.18.3",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
