--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.4.2",
+        "axios": "^0.27.2",
         "conventional-changelog-cli": "^2.2.2",
         "copy-to-clipboard": "^3.3.2",
         "gh-pages": "^4.0.0",
